Add --low-ram mode to reduce memory usage
Introduce a low-memory runtime profile and related adjustments to reduce resident heap usage. Key changes:

- Add LOW_RAM_MODE flag and --low-ram arg handling (NeoProxyServer). Apply runtime memory profile early to adjust buffers and caps.
- Add server constants for low-ram defaults and limits (ServerConstants) and bump project version to 7.1.0 (pom.xml).
- Make TCP buffer configurable via config (BUFFER_LEN) and read it in ConfigOperator.
- Disable/skip WebAdmin in low-ram mode and avoid starting JLine reader thread when launching as a service (ConsoleManager). WebAdmin console command now reports when disabled.
- Switch SQLite temp_store to FILE in low-ram mode to reduce memory (Database).
- Load ip2region DBs in a streaming/file-backed way when low-ram is enabled to avoid large startup allocations; create temp files, close searchers cleanly on shutdown, and synchronize searches (IPGeolocationHelper).
- Reduce thread pools in RemoteKeyProvider under low-ram and use a per-task virtual-thread executor for HTTP requests.
- Make UDPTransformer receive buffer and send-queue capacity configurable and use try-with-resources for ThreadManager; update UDP service to use the new receive buffer length.
- Fix TCPTransformer thread lifecycle to always close ThreadManager and unregister/cleanup TCP sockets safely.
- Add BUFFER_LEN default to config template and add tests verifying low-ram behavior.

Why: allow neoProxyServer to run with much smaller per-connection heap (at cost of more syscalls/CPU and reduced UDP queueing), suitable for memory-constrained environments or container deployments.